--- a/multiomics/peak2gene_example.Rmd
+++ b/multiomics/peak2gene_example.Rmd
@@ -2,6 +2,10 @@
 title: "Peak 2 gene association example"
 output: html_notebook
 ---
+```{r}
+BiocManager::install(c("SingleCellExperiment", "GenomicRanges", "scran", "tidyr", "Matrix", "ensembldb", 
+                       "EnsDb.Hsapiens.v86", 'BSgenome.Hsapiens.UCSC.hg38'))
+```
 
 ```{r}
 library(SingleCellExperiment)
@@ -9,11 +13,11 @@ library(GenomicRanges)
 
 ## For variable gene selection
 library(scran)
-
 library(tidyr)
-library(Matrix)
 library(ensembldb)
 library(EnsDb.Hsapiens.v86) ## Remember to pick your genome!
+library(BSgenome.Hsapiens.UCSC.hg38)
+library(dplyr)
 ```
 
 ## Load data
@@ -21,6 +25,9 @@ library(EnsDb.Hsapiens.v86) ## Remember to pick your genome!
 ```{r}
 atac_sce <- readRDS("./processed_data/Multiome_ATAC_ext_trajectory_SCE.RDS")
 rna_sce <- readRDS("./processed_data/Multiome_RNA_ext_trajectory_SCE.RDS")
+
+atac_sce <- atac_sce[rowSums(counts(atac_sce)) != 0,]
+
 ```
 
 ## Define peak-gene pairs to test 
@@ -90,7 +97,7 @@ peak2feature <- function(peaks_gr, features_gr, d=50000, feat_anno=NULL){
   }
   
   ## Build adjacency matrix for hits
-  adj_mat <- Matrix(data=0, nrow = length(all_peaks), ncol=length(all_feats))
+  adj_mat <- Matrix::Matrix(data=0, nrow = length(all_peaks), ncol=length(all_feats))
   for (i in unique(subjectHits(ovs))) {
     # if (length(adj_mat[queryHits(ovs[subjectHits(ovs)==i]),i]) > 0) {
     adj_mat[queryHits(ovs[subjectHits(ovs)==i]),i] <- 1
@@ -115,7 +122,7 @@ hg38_genes_gr <- genes(EnsDb.Hsapiens.v86)
 hvg_gr <- hg38_genes_gr[hvg_rna[hvg_rna %in% names(hg38_genes_gr)]]
 
 ## Extract genomic locations of peaks (trying on a subset of peaks)
-peaks_gr <- rowRanges(atac_sce)[0:10000]
+peaks_gr <- rowRanges(atac_sce)
 
 ## Find peaks proximal to HVGs
 p2g_mapping <- peak2feature(peaks_gr, hvg_gr, 
@@ -124,6 +131,8 @@ p2g_mapping <- peak2feature(peaks_gr, hvg_gr,
 
 ## Filter peaks with at least one overlap
 p2g_mapping_filtered <- p2g_mapping[rowSums(p2g_mapping) > 0,]
+colnames(p2g_mapping_filtered) <- hvg_rna[hvg_rna %in% names(hg38_genes_gr)]
+p2g_mapping_filtered <- as(p2g_mapping_filtered, "dgTMatrix")
 ```
 
 ## Test
@@ -131,38 +140,78 @@ p2g_mapping_filtered <- p2g_mapping[rowSums(p2g_mapping) > 0,]
 Adapting helper functions from `https://github.com/buenrostrolab/stimATAC_analyses_code`
 
 ```{r}
-A = counts(atac_sce) # ATAC matrix
-R = counts(rna_sce) # RNA matrix # Gene-Peak overlap pairing data.frame
-
-colnames(p2g_mapping_filtered) <- hvg_rna[hvg_rna %in% names(hg38_genes_gr)]
-
-pairnames <- cbind(rownames(p2g_mapping_filtered)[p2g_mapping_filtered@i], colnames(p2g_mapping_filtered)[p2g_mapping_filtered@p])
-
-uniq_peaks <- unique(p2g_mapping_filtered_ls[,1])
-uniq_genes <- unique(p2g_mapping_filtered_ls[,2])
-
-all_peaks <- GRangesToString(rowRanges(atac_sce), sep = c(":", "-"))
-uniq_peaks_ixs <- which(all_peaks %in% uniq_peaks)
-uniq_genes_ixs <- which(rownames(R) %in% uniq_genes)
-
-# Get indices of genes and peaks from overlap object for chunk
-# Assumes query hits are genes and subject hits are peaks in the overlap object
-# geneIndices <- O$Gene[chunk[1]:chunk[2]]
-# peakIndices <- O$Peak[chunk[1]:chunk[2]]
-#   
-# pairnames <- cbind(rownames(A)[peakIndices],rownames(R)[geneIndices])
-#   
-# uniquegenes <- unique(geneIndices)
-# uniquepeaks <- unique(peakIndices)
+run_p2gene_cor <- function(rna_sce, atac_sce, pairnames){
+  pairnames <- as.data.frame(pairnames)
+  uniq_peaks <- unique(pairnames[,1])
+  uniq_genes <- unique(pairnames[,2])
   
-M1 <- as.matrix(Matrix::t(A[uniq_peaks_ixs,,drop=FALSE])) # In case only 1 match, keep matrix structure
-M2 <- as.matrix(Matrix::t(R[uniq_genes_ixs,,drop=FALSE])) # In case only 1 match, keep matrix structure
+  A = counts(atac_sce) # ATAC matrix
+  R = counts(rna_sce) # RNA matrix
+  
+  all_peaks <- GRangesToString(rowRanges(atac_sce), sep = c(":", "-"))
+  uniq_peaks_ixs <- which(all_peaks %in% uniq_peaks)
+  uniq_genes_ixs <- which(rownames(R) %in% uniq_genes)
+  
+  M1 <- as.matrix(Matrix::t(A[uniq_peaks_ixs,,drop=FALSE])) 
+  M2 <- as.matrix(Matrix::t(R[uniq_genes_ixs,,drop=FALSE])) 
+  
+  cormat <- cor(x = M1, y = M2, method = "spearman")
+  rownames(cormat) <- uniq_peaks
+  colnames(cormat) <- uniq_genes
+  cors <- sapply(1:nrow(pairnames), function(i) cormat[pairnames[i,1], pairnames[i,2]])
+  pairnames <- cbind(pairnames, cors)
+  colnames(pairnames) <- c("peak", "gene", "cor")
+  return(pairnames)
+}
 
-cormat <- cor(x = M1, y = M2, method = "spearman")
-cormat
+pairnames <- cbind(rownames(p2g_mapping_filtered)[p2g_mapping_filtered@i], colnames(p2g_mapping_filtered)[p2g_mapping_filtered@j])
+
+## Filter to a single gene for testing
+g <- unique(pairnames[,2])[1]
+pairnames <- pairnames[pairnames[,2]==g,]
+
+## Compute correlation of true peak-gene pairs
+cor_observed <- run_p2gene_cor(rna_sce, atac_sce, pairnames)
+colnames(cor_observed)[3] <- "cor_observed"
+
+## Compare to accessibility of background peaks
+n_iter = 30
+sognif_alpha = 0.01
+
+## Find background peaks
+atac_chromvar_sce <- addGCBias(atac_sce[uniq_peaks_ixs,], genome=BSgenome.Hsapiens.UCSC.hg38)
+rownames(atac_chromvar_sce) <- uniq_peaks
+bg <- getBackgroundPeaks(atac_chromvar_sce, niterations = n_iter) ## This can take a while
+rownames(bg) <- rownames(atac_chromvar_sce)
+
+## Find null correlation to background
+for (i in 1:n_iter){
+  pairnames_bg <- pairnames[,1:2] # Initialize gene-peak pairing to observed
+  pairnames_bg[,1] <- uniq_peaks[bg[pairnames[,1],i]] # replace with bg peaks for iteration
+
+  cor_bg_i <- run_p2gene_cor(rna_sce, atac_sce, pairnames_bg)
+  cor_observed <- cbind(cor_observed, cor_bg_i[,"cor"] )
+  colnames(cor_observed)[ncol(cor_observed)] <- paste0("cor_bg_", i)
+  }
+
+## Test for significance 
+permCols <- 4:(ncol(bg)+3)
+cor_observed_filt <- cor_observed[cor_observed[,"cor_observed"] > 0,]   # Filter to positive correlations
+  
+# Remove multi-mapping peaks (force 1-1 mapping)
+cor_observed_filt <- data.frame(cor_observed_filt) %>% group_by(peak) %>% filter(cor_observed==max(cor_observed))
+
+# # Z test pval
+cor_observed_filt$rBgSD <- matrixStats::rowSds(as.matrix(cor_observed_filt[,permCols]))
+cor_observed_filt$rBgMean <- rowMeans(cor_observed_filt[,permCols])
+cor_observed_filt$pvalZ <- 1-stats::pnorm(q = cor_observed_filt$cor_observed, mean = cor_observed_filt$rBgMean,sd = cor_observed_filt$rBgSD)
+
+## Filter to significant results
+signif_cor_observed <- cor_observed_filt[cor_observed_filt$pvalZ < signif_alpha, c("peak","gene","cor_observed","pvalZ")]
 ```
 
 ```{r}
-p2g_mapping_filtered_ls <- cbind(rownames(p2g_mapping_filtered)[p2g_mapping_filtered@i], colnames(p2g_mapping_filtered)[p2g_mapping_filtered@p])
+## Save peak 2 gene associations
+write.csv(signif_cor_observed, "./outputs/signif_peak2genes_mappings.csv")
 ```
 
